--- a/index.html
+++ b/index.html
@@ -12,7 +12,37 @@
 
 <body id="body">
     <div class="container">
+        <div id="header">
+            <div class="empty-space"></div>
+            <div class="start">
+                <button class="start-button">Start</button>
+            </div>
+            <div id="wrong-answers">Wrong guesses: 0</div>
+        </div>
+        <div id="card-container">
+            <div class="row card-row">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+            <div class="row card-row">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+            <div class="row card-row">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+            <div class="row card-row">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+        </div>
     </div>
+
     <script src="./js/memory-game.js"></script>
 </body>
 
