--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             </div>
             <div id="wrong-answers">Wrong guesses: 0</div>
         </div>
+        <div id="score-container">
+            <div id="high-score-text"></div>
+            <table id="table-score"></table>
+        </div>
         <div id="card-container">
         </div>
         <div id="win-text-top"></div>
         <div id="win-text-bottom"></div>
-        <div id="high-score-text"></div>
-        <div class="high-score-rookie high-score"></div>
-        <div class="high-score-advanced high-score"></div>
-        <div class="high-score-pro high-score"></div>
         <div id="save-text"></div>
         <input type="text" id="input-name">
         <button class="btn btn-success" id="save-button">Save</button>
