Fixed storage on other devices

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     </button>
                 </div>
                 <div class="modal-body levels d-flex">
-                    <div name="rookie" class="level">Rookie</div>
-                    <div name="advanced" class="level">Advanced</div>
-                    <div name="pro" class="level">Pro</div>
+                    <button name="rookie" class="level btn btn-light">Rookie</button>
+                    <button name="advanced" class="level btn btn-light">Advanced</button>
+                    <button name="pro" class="level btn btn-light">Pro</button>
                 </div>
                 <div class="modal-footer">
                     <div class="go-button-container">
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-    <audio id="player">
+    <audio id="player" loop>
         <source src="./music/nba_nbc_theme.mp3" type="audio/mp3">
     </audio>
     <audio id="match-music">
